Bug 629986 unlabeled edit fields in the crash reporter r=ted a=bsmedberg